fix sort loader z-index

--- a/app/javascript/styles/article/index.sass
+++ b/app/javascript/styles/article/index.sass
@@ -197,6 +197,7 @@
     position: fixed
     top: 100px
     right: 150px
+    z-index: 3
 
   .content-insert-loader
     z-index: 3
